# zeta

./: .gitignore  Cargo.toml  README.md  build.sh  run.sh  test.sh
bootloader/: Cargo.toml  README.md
bootloader/src/: arena.rs  filesystem.rs  lib.rs  main.rs  vec.rs
bootloader/src/config/: mod.rs
bootloader/src/config/parser/: impls.rs  lexer.rs  mod.rs  strings.rs
bootloader/src/logging/: filter.rs  mod.rs  preconfig.rs  state.rs
bootloader/src/terminal/: framebuffer.rs  info.rs  mod.rs
bootloader/src/terminal/psf/: glyph.rs  mod.rs
bootloader/src/uefi/: mod.rs
bootloader/src/uefi/protocols/: mod.rs
bootloader/src/uefi/protocols/console/: mod.rs  text.rs
bootloader/src/uefi/tables/: boot.rs  mod.rs  system.rs
digest/: Cargo.toml
digest/src/: lib.rs
digest/src/sha512/: bits.rs  bytes.rs  mod.rs
elf/: Cargo.toml
elf/src/: header.rs  ident.rs  lib.rs
kernel/: Cargo.toml  build.rs  kernel.ld
kernel/linker_scripts/: x86_64.ld
kernel/src/: cells.rs  const_parsing.rs  logging.rs  main.rs  polyfill.rs  spinlock.rs  utils.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: mod.rs
kernel/src/arch/x86_64/boot/: limine.rs  mod.rs
kernel/src/memory/: physical.rs
sync/: Cargo.toml
sync/src/: lib.rs
uefi/: Cargo.toml
uefi/src/: datatypes.rs  lib.rs
uefi/src/protocols/: mod.rs
uefi/src/protocols/console/: mod.rs  text.rs
uefi/src/tables/: boot_services.rs  mod.rs  system.rs
xtask/: Cargo.toml
xtask/src/: config.rs  main.rs
