[workspace]
resolver = "2"
members = ["bootloader", "digest", "sync"]


[workspace.package]
authors = ["Jarl Evanson <evanson.jarl@gmail.com"]
edition = "2021"
license = "MIT or Apache-2.0"
readme = true
repository = "https://github.com/JarlEvanson/zeta"

[workspace.dependencies]
log = "=0.4.20"
sync = { path = "sync" }
digest = { path = "digest" }

[workspace.lints.clippy]
pedantic = "deny"
multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"
missing_docs_in_private_items = "warn"

[workspace.lints.rust]
missing_docs = "warn"

