[workspace]
members = ["bootloader", "kernel", "uefi"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Jarl Evanson <evanson.jarl@gmail.com>"]
repository = "https://github.com/JarlEvanson/zeta.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"
missing_docs_in_private_items = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.dependencies]
kernel_config = { path = "kernel_config" }
uefi = { path = "uefi" }
